[package]
name = "json-parser-neon"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = { version = "2.15.1", features = ["napi4", "serde-json"] }
napi-derive = "2.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
# Only include simd-json for non-wasm targets
simd-json = { version = "0.11.0", optional = true }
wasm-bindgen = "0.2.87"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simd-json = "0.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"

[build-dependencies]
napi-build = "2.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false
incremental = false

[profile.release.build-override]
opt-level = 3
codegen-units = 1

# Include these features only when targeting wasm
[features]
default = ["simd-json"]
wasm = []
