[package]
name = "json-parser-neon"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = { version = "0.10", default-features = false, features = ["napi-6"] }
serde_json = "1.0"
