[package]
name = "json_parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
napi = { version = "2.14.1", features = ["napi4"] }
napi-derive = "2.14.1"

[build-dependencies]
napi-build = "2.0.1"
